--- a/aalto.bib
+++ b/aalto.bib
@@ -152,6 +152,24 @@
   abstract = {Without the sacrifice of scientific accuracy, the author has attempted to present in a readable form the literature on group prejudice. The 31 chapters of this book are organized around 8 main topics: preferential thinking, group differences, perceiving and thinking about group differences, sociocultural factors, acquiring prejudice, dynamics of prejudice, character structure, and reducing group tensions. (PsycINFO Database Record (c) 2016 APA, all rights reserved)}
 }
 
+@incollection{altarawnehExtensibleCloudBased2021,
+  title = {An {{Extensible Cloud Based Avatar}}: {{Implementation}} and {{Evaluation}}},
+  shorttitle = {An {{Extensible Cloud Based Avatar}}},
+  booktitle = {Recent {{Advances}} in {{Technologies}} for {{Inclusive Well}}-{{Being}}: {{Virtual Patients}}, {{Gamification}} and {{Simulation}}},
+  author = {Altarawneh, Enas and Jenkin, Michael and Scott MacKenzie, I.},
+  editor = {Brooks, Anthony Lewis and Brahman, Sheryl and Kapralos, Bill and Nakajima, Amy and Tyerman, Jane and Jain, Lakhmi C.},
+  year = {2021},
+  series = {Intelligent {{Systems Reference Library}}},
+  pages = {503--522},
+  publisher = {{Springer International Publishing}},
+  address = {{Cham}},
+  doi = {10.1007/978-3-030-59608-8_27},
+  abstract = {A common issue in human-robot interaction is that a naive user expects an intelligent human-like conversational experience. Recent advances have enabled such experiences through cloud-based infrastructure; however, this is not currently possible on most mobile robots due to the need to access cloud-based (remote) AI technology. Here we describe a toolkit that supports interactive avatars using cloud-based resources for human-robot interaction. The toolkit deals with communication and rendering latency through parallelization and mechanisms that obscure delays. This technology can be used to put an interactive face on a mobile robot. But does an animated face on a robot actually make the interaction more effective or useful? To answer this question, we conducted a user study comparing human-robot interaction using text, audio, a realistic avatar, and a simplistic cartoon avatar. Although response time was longer for both avatar interfaces (due to increased computation and communication), this had no significant effect on participant satisfaction with the avatar-based interfaces. When asked about general preferences, more participants preferred the audio interface over the text interface, the avatar interfaces over the audio interface, and the realistic avatar interface over the cartoon avatar interface. This chapter includes and expands on material previously published [1, 2].},
+  isbn = {978-3-030-59608-8},
+  language = {en},
+  keywords = {Artificial intelligence,Avatars,Cloud computing,Human-robot interaction,Intelligent agent,Parallel processing,Rendering farm,Speech-to-text,Text-to-speech}
+}
+
 @article{alves-oliveiraGuideBuildYOLO2019,
   title = {Guide to Build {{YOLO}}, a Creativity-Stimulating Robot for Children},
   author = {{Alves-Oliveira}, Patr{\'i}cia and Arriaga, Patr{\'i}cia and Paiva, Ana and Hoffman, Guy},
@@ -992,6 +1010,20 @@
   doi = {10.1191/1478088706qp063oa},
   language = {en},
   file = {/home/avnerus/Zotero/storage/9JPAEEV6/Braun and Clarke - 2006 - Using thematic analysis in psychology.pdf}
+}
+
+@inproceedings{bremnerPersonalityPerceptionRobot2016,
+  title = {Personality Perception of Robot Avatar Tele-Operators},
+  booktitle = {2016 11th {{ACM}}/{{IEEE International Conference}} on {{Human}}-{{Robot Interaction}} ({{HRI}})},
+  author = {Bremner, Paul and Celiktutan, Oya and Gunes, Hatice},
+  year = {2016},
+  month = mar,
+  pages = {141--148},
+  issn = {2167-2148},
+  doi = {10.1109/HRI.2016.7451745},
+  abstract = {Nowadays a significant part of human-human interaction takes place over distance. Tele-operated robot avatars, in which an operator's behaviours are portrayed by a robot proxy, have the potential to improve distance interaction, e.g., improving social presence and trust. However, having communication mediated by a robot changes the perception of the operator's appearance and behaviour, which have been shown to be used alongside vocal cues in judging personality. In this paper we present a study that investigates how robot mediation affects the way the personality of the operator is perceived. More specifically, we aim to investigate if judges of personality can be consistent in assessing personality traits, can agree with one another, can agree with operators' self-assessed personality, and shift their perceptions to incorporate characteristics associated with the robot's appearance. Our experiments show that (i) judges utilise robot appearance cues along with operator vocal cues to make their judgements, (ii) operators' arm gestures reproduced on the robot aid personality judgements, and (iii) how personality cues are perceived and evaluated through speech, gesture and robot appearance is highly operator-dependent. We discuss the implications of these results for both tele-operated and autonomous robots that aim to portray personality.},
+  keywords = {Avatars,Computers,Electronic mail,humanoid robot,Interviews,Mediation,multi-modal communication,personality,Robot kinematics,telepresence},
+  file = {/home/avnerus/Zotero/storage/PN38U7HP/Bremner et al. - 2016 - Personality perception of robot avatar tele-operat.pdf;/home/avnerus/Zotero/storage/BTRL4BIQ/7451745.html}
 }
 
 @article{bremnerPersonalityPerceptionRobot2017,
@@ -2746,6 +2778,24 @@
   file = {/home/avnerus/Zotero/storage/LLPAMGKI/Fox et al. - 2015 - Avatars Versus Agents A Meta-Analysis Quantifying.pdf;/home/avnerus/Zotero/storage/TC56IMM4/07370024.2014.html}
 }
 
+@article{foxSexualizedAvatarsLead2015,
+  title = {Sexualized {{Avatars Lead}} to {{Women}}'s {{Self}}-{{Objectification}} and {{Acceptance}} of {{Rape Myths}}},
+  author = {Fox, Jesse and Ralston, Rachel A. and Cooper, Cody K. and Jones, Kaitlyn A.},
+  year = {2015},
+  month = sep,
+  journal = {Psychology of Women Quarterly},
+  volume = {39},
+  number = {3},
+  pages = {349--362},
+  publisher = {{SAGE Publications Inc}},
+  issn = {0361-6843},
+  doi = {10.1177/0361684314553578},
+  abstract = {Research has indicated that many video games and virtual worlds are populated by unrealistic, hypersexualized representations of women, but the effects of using these representations remain understudied. Objectification theory suggests that women's exposure to sexualized media representations leads to self-objectification. Further, we anticipated this process would lead to increases in rape myth acceptance (RMA). Two experiments (Study 1, N = 87; Study 2, N = 81) examined the effects of avatar features on women's experiences of self-objectification. In both studies, college women exposed to sexualized avatars experienced higher levels of self-objectification after the virtual experience than those exposed to nonsexualized avatars. Furthermore, in Study 2, self-objectification mediated the relationship between controlling a sexualized avatar and subsequent levels of RMA. We discuss the implications of women using sexualized avatars in video games and virtual environments, which may lead to negative attitudes about the self and other women off-line due to heightened self-objectification. Additional online materials for this article are available to PWQ subscribers on PWQ's website at http://pwq.sagepub.com/supplemental.},
+  language = {en},
+  keywords = {attitudes,body image,computer games,mass media,objectification,rape,virtual environments},
+  file = {/home/avnerus/Zotero/storage/GJ2SFXVJ/Fox et al. - 2015 - Sexualized Avatars Lead to Women’s Self-Objectific.pdf}
+}
+
 @inproceedings{frasSoftBiomimeticProsthetic2018,
   title = {Soft {{Biomimetic Prosthetic Hand}}: {{Design}}, {{Manufacturing}} and {{Preliminary Examination}}},
   shorttitle = {Soft {{Biomimetic Prosthetic Hand}}},
@@ -4278,6 +4328,16 @@
   file = {/home/avnerus/Zotero/storage/H7IAKGI6/64.html}
 }
 
+@article{jahnEFFECTSROBOTICEMBODIMENT2019a,
+  title = {{{THE EFFECTS OF ROBOTIC EMBODIMENT ON INTERGROUP BIAS}}: {{AN EXPERIMENT IN IMMERSIVE VIRTUAL REALITY}}},
+  shorttitle = {{{THE EFFECTS OF ROBOTIC EMBODIMENT ON INTERGROUP BIAS}}},
+  author = {Jahn, Katharina and Kordyaka, Bastian},
+  year = {2019},
+  month = may,
+  journal = {Research-in-Progress Papers},
+  file = {/home/avnerus/Zotero/storage/IP95AY5U/64.html}
+}
+
 @article{jainNanoporeSequencingAssembly2018,
   title = {Nanopore Sequencing and Assembly of a Human Genome with Ultra-Long Reads},
   author = {Jain, Miten and Koren, Sergey and Miga, Karen H and Quick, Josh and Rand, Arthur C and Sasani, Thomas A and Tyson, John R and Beggs, Andrew D and Dilthey, Alexander T and Fiddes, Ian T and Malla, Sunir and Marriott, Hannah and Nieto, Tom and O'Grady, Justin and Olsen, Hugh E and Pedersen, Brent S and Rhie, Arang and Richardson, Hollian and Quinlan, Aaron R and Snutch, Terrance P and Tee, Louise and Paten, Benedict and Phillippy, Adam M and Simpson, Jared T and Loman, Nicholas J and Loose, Matthew},
@@ -4631,6 +4691,23 @@
   author = {Kaufmann, Walter},
   pages = {608},
   language = {en}
+}
+
+@inproceedings{kawaharaTransformedHumanPresence2016,
+  title = {Transformed {{Human Presence}} for {{Puppetry}}},
+  booktitle = {Proceedings of the 13th {{International Conference}} on {{Advances}} in {{Computer Entertainment Technology}}},
+  author = {Kawahara, Keisuke and Sakashita, Mose and Koike, Amy and Suzuki, Ippei and Suzuki, Kenta and Ochiai, Yoichi},
+  year = {2016},
+  month = nov,
+  series = {{{ACE}} '16},
+  pages = {1--6},
+  publisher = {{Association for Computing Machinery}},
+  address = {{New York, NY, USA}},
+  doi = {10.1145/3001773.3001813},
+  abstract = {We propose a system for transmitting a human performer's body and facial movements to a puppet with audiovisual feedback to the performer. The system consists of a head-mounted display (HMD) that shows the performer the video recording of the puppet's view, a microphone for voice capture, and photoreflectors for detecting the mouth movements of the human performer. In conventional puppetry, there is also the need for practice in the manipulation of the puppets to achieve good performance. The proposed telepresence system addresses these issues by enabling the human performer to manipulate the puppet through their own body and facial movements. The proposed system is expected to contribute to the development of new applications of puppetry and expand the interactivity of puppetry and the scope of entertainment.},
+  isbn = {978-1-4503-4773-0},
+  keywords = {Animatronics,head-mounted display,puppet,telepresence},
+  file = {/home/avnerus/Zotero/storage/DMDHNXNG/Kawahara et al. - 2016 - Transformed Human Presence for Puppetry.pdf}
 }
 
 @article{kayeEmojisInsightsAffordances2017,
@@ -5285,7 +5362,8 @@
   author = {Lee, Hyelip and Kim, Yeon-Ho and Lee, Kwang-ku and Yoon, Dae-Keun and You, Bum-Jae},
   year = {2015},
   pages = {33--43},
-  publisher = {{Springer}}
+  publisher = {{Springer}},
+  file = {/home/avnerus/Zotero/storage/W7VFN6PN/Lee et al. - 2015 - Designing the appearance of a telepresence robot, .pdf}
 }
 
 @misc{leedshackerspaceMakingMachinableWaxa,
@@ -6696,6 +6774,18 @@
   publisher = {{IntechOpen}}
 }
 
+@inproceedings{nissenAnthropomorphismTrustUncanny2021,
+  title = {Between {{Anthropomorphism}}, {{Trust}}, and the {{Uncanny Valley}}: A {{Dual}}-{{Processing Perspective}} on {{Perceived Trustworthiness}} and {{Its Mediating Effects}} on {{Use Intentions}} of {{Social Robots}}},
+  shorttitle = {Between {{Anthropomorphism}}, {{Trust}}, and the {{Uncanny Valley}}},
+  booktitle = {Hawaii {{International Conference}} on {{System Sciences}}},
+  author = {Nissen, Anika and Jahn, Katharina},
+  year = {2021},
+  doi = {10.24251/HICSS.2021.043},
+  abstract = {Designing social robots with the aim to increase their acceptance is crucial for the success of their implementation. However, even though increasing anthropomorphism is often seen as a promising way to achieve this goal, the uncanny valley effect proposes that anthropomorphism can be detrimental to acceptance unless robots are almost indistinguishable from humans. Against this background, we use a dual processing theory approach to investigate whether an uncanny valley of perceived trustworthiness (PT) can be observed for social robots and how this effect differs between the intuitive and deliberate reasoning system. The results of an experiment with four conditions and 227 participants provide support for the uncanny valley effect. Furthermore, mediation analyses suggested that use intention decreases through both reduced intuitive and deliberate PT for medium levels of anthropomorphism. However, for high levels of anthropomorphism (indistinguishable from real human), only intuitive PT determined use intention. Consequently, our results indicate both advantages and pitfalls of anthropomorphic design.},
+  language = {en},
+  file = {/home/avnerus/Zotero/storage/CJ34IH4Q/Nissen and Jahn - 2021 - Between Anthropomorphism, Trust, and the Uncanny V.pdf}
+}
+
 @article{nitscheCharacterYourHand,
   title = {A {{Character}} in {{Your Hand}}: {{Puppetry}} to {{Inform Game Controls}}},
   author = {Nitsche, Michael and McBride, Pierce},
@@ -7616,6 +7706,20 @@
   title = {(3) {{Radiohead}} - {{Live}} in {{Berlin}} ({{September}} 2016) \#{{StayHome}} \#{{WithMe}} - {{YouTube}}},
   howpublished = {https://www.youtube.com/watch?v=NXy5xdwJaIY\&t=1064s},
   file = {/home/avnerus/Zotero/storage/5I6DQWTV/watch.html}
+}
+
+@inproceedings{raeInfluenceHeightRobotmediated2013,
+  title = {The Influence of Height in Robot-Mediated Communication},
+  booktitle = {2013 8th {{ACM}}/{{IEEE International Conference}} on {{Human}}-{{Robot Interaction}} ({{HRI}})},
+  author = {Rae, Irene and Takayama, Leila and Mutlu, Bilge},
+  year = {2013},
+  month = mar,
+  pages = {1--8},
+  issn = {2167-2148},
+  doi = {10.1109/HRI.2013.6483495},
+  abstract = {A large body of research in human communication has shown that a person's height plays a key role in how persuasive, attractive, and dominant others judge the person to be. Robotic telepresence systems - systems that combine video-conferencing capabilities with robotic navigation to allow geographically dispersed people to maneuver in remote locations - represent remote users, operators, to local users, locals, through the use of an alternate physical representation. In this representation, physical characteristics such as height are dictated by the manufacturer of the system. We conducted a two-by-two (relative system height: shorter vs. taller; team role: leader vs. follower), between-participants study (n = 40) to investigate how the system's height affects the local's perceptions of the operator and subsequent interactions. Our findings show that, when the system was shorter than the local and the operator was in a leadership role, the local found the operator to be less persuasive. Furthermore, having a leadership role significantly affected the local's feelings of dominance with regard to being in control of the conversation.},
+  keywords = {Atmospheric measurements,Cameras,compliance,height,Lead,Particle measurements,Reliability,Robot vision systems,Robot-mediated communication,robotic telepresence systems,team role},
+  file = {/home/avnerus/Zotero/storage/FAUIPIL9/Rae et al. - 2013 - The influence of height in robot-mediated communic.pdf;/home/avnerus/Zotero/storage/AL6PAIEI/6483495.html}
 }
 
 @book{raglandJacquesLacanLogic2015,
@@ -8987,6 +9091,20 @@
   file = {/home/avnerus/Zotero/storage/S4397FY3/Stone - 1991 - Will the real body please stand up.pdf}
 }
 
+@inproceedings{straitRobotsRacializedLikeness2018,
+  title = {Robots {{Racialized}} in the {{Likeness}} of {{Marginalized Social Identities}} Are {{Subject}} to {{Greater Dehumanization}} than Those Racialized as {{White}}},
+  booktitle = {2018 27th {{IEEE International Symposium}} on {{Robot}} and {{Human Interactive Communication}} ({{RO}}-{{MAN}})},
+  author = {Strait, Megan and Ramos, Ana S{\'a}nchez and Contreras, Virginia and Garcia, Noemi},
+  year = {2018},
+  month = aug,
+  pages = {452--457},
+  issn = {1944-9437},
+  doi = {10.1109/ROMAN.2018.8525610},
+  abstract = {The emergence and spread of humanlike robots into increasingly public domains has revealed a concerning phenomenon: people's unabashed dehumanization of robots, particularly those gendered as female. Here we examined this phenomenon further towards understanding whether other socially marginalized cues (racialization in the likeness of Asian and Black identities), like female-gendering, are associated with the manifestation of dehumanization (e.g., objectification, stereotyping) in human-robot interactions. To that end, we analyzed free-form comments (N = 535) on three videos, each depicting a gynoid - Bina48, Nadine, or Yangyang - racialized as Black, White, and Asian respectively. As a preliminary control, we additionally analyzed commentary (N = 674) on three videos depicting women embodying similar identity cues. The analyses indicate that people more frequently dehumanize robots racialized as Asian and Black, than they do of robots racialized as White. Additional, preliminary evaluation of how people's responding towards the gynoids compares to that towards other people suggests that the gynoids' ontology (as robots) further facilitates the dehumanization.},
+  keywords = {Computer science,Human-robot interaction,Measurement,Ontologies,Robots,Telepresence,Videos},
+  file = {/home/avnerus/Zotero/storage/87VDTVS4/Strait et al. - 2018 - Robots Racialized in the Likeness of Marginalized .pdf;/home/avnerus/Zotero/storage/BDRJWFKX/8525610.html}
+}
+
 @book{straussBasicsQualitativeResearch1990,
   title = {Basics of Qualitative Research},
   author = {Strauss, Anselm and Corbin, Juliet},
@@ -9371,7 +9489,8 @@
   issn = {1875-4805},
   doi = {10.1007/s12369-019-00553-8},
   abstract = {Humanity has been dreaming of robots since the ancient times. Historically, robots \textemdash{} originally called automata \textemdash{} have been the products of technology and faith. The relationship between robots and religion has disappeared in the last two centuries, as science and religion parted ways, and have typically been seen in opposition. Nowadays, as robots and AI are going to spread in human society, new possibilities and new ethical challenges are on the horizon. In this paper, we summarise the state of the art in robotics and religion, and propose a taxonomy for robot morphology that takes into account the factor of religion. The taxonomy encompasses the novel concept of `theomorphic robots', referred to robots that carry the shape of something divine.},
-  language = {en}
+  language = {en},
+  file = {/home/avnerus/Zotero/storage/Z22GWQ3A/Trovato2021_Article_ReligionAndRobotsTowardsTheSyn.pdf}
 }
 
 @inproceedings{tsuiExploringUseCases2011,
@@ -10028,6 +10147,21 @@
   language = {en}
 }
 
+@inproceedings{yamazakiTeleoperatedAndroidEmbodied2012,
+  title = {Teleoperated Android as an Embodied Communication Medium: {{A}} Case Study with Demented Elderlies in a Care Facility},
+  shorttitle = {Teleoperated Android as an Embodied Communication Medium},
+  booktitle = {2012 {{IEEE RO}}-{{MAN}}: {{The}} 21st {{IEEE International Symposium}} on {{Robot}} and {{Human Interactive Communication}}},
+  author = {Yamazaki, Ryuji and Nishio, Shuichi and Ogawa, Kohei and Ishigur, Hiroshi},
+  year = {2012},
+  month = sep,
+  pages = {1066--1071},
+  issn = {1944-9437},
+  doi = {10.1109/ROMAN.2012.6343890},
+  abstract = {Teleoperated androids, which are robots with humanlike appearances, are being produced as new media of human relationships. We explored the potential of humanoid robots and how they affect people in the real world when they are employed to express a telecommunication presence and a sense of `being there'. We introduced Telenoid, a teleoperated android, to a residential care facility to see how the elderly with dementia respond to it. Our exploratory study focused on the social aspects that might facilitate communication between the elderly and Telenoid's operator. Telenoid elicited positive images and interactive reactions from the elderly with mild dementia, even from those with severe cognitive impairment. They showed strong attachment to its child-like huggable design and became willing to converse with it. Our result suggests that an affectionate bond may be formed between the elderly and the android to provide the operator with easy communication to elicit responses from senior citizens.},
+  keywords = {Androids,Dementia,Humanoid robots,Humans,Senior citizens},
+  file = {/home/avnerus/Zotero/storage/N37QSAUB/Yamazaki et al. - 2012 - Teleoperated android as an embodied communication .pdf}
+}
+
 @article{yangFlexibleActuatorsSoft2020,
   title = {Flexible {{Actuators}} for {{Soft Robotics}}},
   author = {Yang, Ying and Wu, Yanxiao and Li, Cheng and Yang, Xiaoming and Chen, Wei},
@@ -10112,6 +10246,23 @@
   isbn = {978-1-4503-0268-5},
   language = {en},
   file = {/home/avnerus/Zotero/storage/UEJ5JZ88/Yim and Shaw - 2011 - Design considerations of expressive bidirectional .pdf}
+}
+
+@inproceedings{yimDesignConsiderationsExpressive2011a,
+  title = {Design Considerations of Expressive Bidirectional Telepresence Robots},
+  booktitle = {{{CHI}} '11 {{Extended Abstracts}} on {{Human Factors}} in {{Computing Systems}}},
+  author = {Yim, Ji-Dong and Shaw, Chris D.},
+  year = {2011},
+  month = may,
+  series = {{{CHI EA}} '11},
+  pages = {781--790},
+  publisher = {{Association for Computing Machinery}},
+  address = {{New York, NY, USA}},
+  doi = {10.1145/1979742.1979633},
+  abstract = {Telepresence is an emerging market for everyday robotics, while limitations still exist for such robots to be widely used for ordinary people's social communication. In this paper, we present our iterative design approach toward an interactive bidirectional robot intermediaries along with application ideas and design considerations. This study also surveys recent efforts in HCI and HRI that augment multimodal interfaces for computer mediated communication. We conclude by discussing the key lessons we found useful from the system design. The findings for bidirectional telepresence robot interfaces are of: synchronicity, robot's role, intelligence, personalization, and personality construction method.},
+  isbn = {978-1-4503-0268-5},
+  keywords = {anthropomorphism,mobile phone,robot-mediated communication,telepresence},
+  file = {/home/avnerus/Zotero/storage/AFB64I36/Yim and Shaw - 2011 - Design considerations of expressive bidirectional .pdf}
 }
 
 @article{zajoncFeelingThinkingPreferences1980,
