--- a/aalto.bib
+++ b/aalto.bib
@@ -1109,6 +1109,18 @@
   file = {/home/avnerus/Zotero/storage/IM8PAYKY/Bromfield - 1994 - The use of puppets in play therapy.pdf}
 }
 
+@article{brownChangingAttitudesIntergroup1999,
+  title = {Changing Attitudes through Intergroup Contact: {{The}} Effects of Group Membership Salience},
+  author = {Brown, Rupert and Vivian, James and Hewstone, Miles},
+  year = {1999},
+  journal = {European Journal of Social Psychology},
+  volume = {29},
+  number = {5-6},
+  pages = {741--764},
+  publisher = {{Wiley Online Library}},
+  isbn = {1099-0992}
+}
+
 @article{brownImmobileMassMovement2004,
   title = {The {{Immobile Mass}}: {{Movement Restrictions}} in the {{West Bank}}},
   shorttitle = {The {{Immobile Mass}}},
@@ -1347,6 +1359,40 @@
 @misc{CanVirtualReality,
   title = {Can {{Virtual Reality Change Your Mind}}? | {{Thong Nguyen}} | {{TEDxMinneapolis}} - {{YouTube}}},
   howpublished = {https://www.youtube.com/watch?v=eFHj8OVC1\_s}
+}
+
+@article{caoRevisitingContactHypothesis2017,
+  title = {Revisiting the Contact Hypothesis: {{Effects}} of Different Modes of Computer-Mediated Communication on Intergroup Relationships},
+  shorttitle = {Revisiting the Contact Hypothesis},
+  author = {Cao, Bolin and Lin, Wan-Ying},
+  year = {2017},
+  month = may,
+  journal = {International Journal of Intercultural Relations},
+  volume = {58},
+  pages = {23--30},
+  issn = {0147-1767},
+  doi = {10.1016/j.ijintrel.2017.03.003},
+  abstract = {This study applies the contact hypothesis to computer-mediated communication (CMC) and examines whether intergroup computer-mediated contact can facilitate relationships between conflicting groups. The effectiveness of different CMC modes, text-based and video-based, in improving interpersonal and intergroup attitudes was compared. The results from an experiment indicated that video-based CMC exerted greater influence in improving participants' attitudes towards a targeted outgroup member when compared to text-based CMC. However, text-based CMC produced a stronger effect than video-based CMC in improving one's attitudes towards the outgroup as a whole.},
+  language = {en},
+  keywords = {CMC,Contact hypothesis,Intergroup communication},
+  file = {/home/avnerus/Zotero/storage/IGWVYF32/S0147176716304023.html}
+}
+
+@article{caoRevisitingContactHypothesis2017a,
+  title = {Revisiting the Contact Hypothesis: {{Effects}} of Different Modes of Computer-Mediated Communication on Intergroup Relationships},
+  shorttitle = {Revisiting the Contact Hypothesis},
+  author = {Cao, Bolin and Lin, Wan-Ying},
+  year = {2017},
+  month = may,
+  journal = {International Journal of Intercultural Relations},
+  volume = {58},
+  pages = {23--30},
+  issn = {0147-1767},
+  doi = {10.1016/j.ijintrel.2017.03.003},
+  abstract = {This study applies the contact hypothesis to computer-mediated communication (CMC) and examines whether intergroup computer-mediated contact can facilitate relationships between conflicting groups. The effectiveness of different CMC modes, text-based and video-based, in improving interpersonal and intergroup attitudes was compared. The results from an experiment indicated that video-based CMC exerted greater influence in improving participants' attitudes towards a targeted outgroup member when compared to text-based CMC. However, text-based CMC produced a stronger effect than video-based CMC in improving one's attitudes towards the outgroup as a whole.},
+  language = {en},
+  keywords = {CMC,Contact hypothesis,Intergroup communication},
+  file = {/home/avnerus/Zotero/storage/BYKQ2KIA/Cao and Lin - 2017 - Revisiting the contact hypothesis Effects of diff.pdf;/home/avnerus/Zotero/storage/UYVTL8IC/S0147176716304023.html}
 }
 
 @article{cappelloAssistingHandFunction2018,
@@ -2911,6 +2957,14 @@
   file = {/home/avnerus/Zotero/storage/ICSW7IKG/Gaertner et al. - 1993 - The Common Ingroup Identity Model Recategorizatio.pdf}
 }
 
+@book{gaertnerReducingIntergroupBias2014,
+  title = {Reducing Intergroup Bias: {{The}} Common Ingroup Identity Model},
+  author = {Gaertner, Samuel L. and Dovidio, John F.},
+  year = {2014},
+  publisher = {{Psychology Press}},
+  isbn = {1-315-80457-3}
+}
+
 @article{gallagherBodyImageBody1995,
   title = {Body {{Image}} and {{Body Schema}} in a {{Deafferented Subject}}},
   author = {Gallagher, Shaun and Cole, Jonathan},
@@ -3553,6 +3607,22 @@
   abstract = {Nonverbal behavior plays a crucial role in human communication and often leads to misunderstandings between people from different cultures, even if they speak the same language fluently. While translation systems are available for verbal communication, translators for nonverbal communication do not exist yet. We present the conceptual design and an early prototype of a real-time gesture translator using body tracking and gesture recognition in avatar-mediated intercultural interactions. It contributes to the ambitious goal of bridging between cultures by translating culture-specific gestures to enhance mutual understanding. Possible applications of the gesture translator are discussed as a facilitating tool for global business meetings and as a means of technology-enhanced conflict resolution and prevention.},
   language = {en},
   file = {/home/avnerus/Zotero/storage/T3G5LIIP/Hasler et al. - 2017 - Real-time gesture translation in intercultural com.pdf}
+}
+
+@article{haslerRealtimeGestureTranslation2017a,
+  title = {Real-Time Gesture Translation in Intercultural Communication},
+  author = {Hasler, B{\'e}atrice S. and Salomon, Oren and Tuchman, Peleg and {Lev-Tov}, Amir and Friedman, Doron},
+  year = {2017},
+  month = feb,
+  journal = {AI \& SOCIETY},
+  volume = {32},
+  number = {1},
+  pages = {25--35},
+  issn = {1435-5655},
+  doi = {10.1007/s00146-014-0573-4},
+  abstract = {Nonverbal behavior plays a crucial role in human communication and often leads to misunderstandings between people from different cultures, even if they speak the same language fluently. While translation systems are available for verbal communication, translators for nonverbal communication do not exist yet. We present the conceptual design and an early prototype of a real-time gesture translator using body tracking and gesture recognition in avatar-mediated intercultural interactions. It contributes to the ambitious goal of bridging between cultures by translating culture-specific gestures to enhance mutual understanding. Possible applications of the gesture translator are discussed as a facilitating tool for global business meetings and as a means of technology-enhanced conflict resolution and prevention.},
+  language = {en},
+  file = {/home/avnerus/Zotero/storage/FF95V5DR/Hasler et al. - 2017 - Real-time gesture translation in intercultural com.pdf}
 }
 
 @article{haslerVirtualPeacemakersMimicry2014,
@@ -7983,15 +8053,6 @@
   file = {/home/avnerus/Zotero/storage/UBFVJ9CG/Rivers - 2015 - Narrative power Playback Theatre as cultural resi.pdf;/home/avnerus/Zotero/storage/D4MHLAR5/13569783.2015.html}
 }
 
-@article{robertsonRobotAvatarsVicarious,
-  title = {Robot Avatars and the Vicarious Realm},
-  author = {Robertson, Nicola},
-  pages = {14},
-  abstract = {I introduce the concept of the vicarious realm as existing between physical `place' and virtual `space'. Using the words of students who employ telepresent robots to attend class for them, I speculate on the role of the robot as a pliable representation of a person, and how it offers the human the opportunity to retain an embodied presence in a place (classroom) in a way that is impossible via the use of a screen. Embodiment and interaction \textendash{} known as intercorporeality is unique to the notion of `place'; without it, we cannot lay claim to being in any place. This assertion has implications for the argument that there can be such a thing as an online `place'. It is my intention that my paper will provide an inspirational base for future researchers to consider our relation to place as our notions of being somewhere come to be questioned.},
-  language = {en},
-  file = {/home/avnerus/Zotero/storage/RZB4D4ES/Robertson - Robot avatars and the vicarious realm.pdf}
-}
-
 @article{robertsonRobotAvatarsVicarious2020,
   title = {Robot Avatars and the Vicarious Realm},
   author = {Robertson, Nicola},
@@ -7999,7 +8060,7 @@
   pages = {14},
   abstract = {I introduce the concept of the vicarious realm as existing between physical `place' and virtual `space'. Using the words of students who employ telepresent robots to attend class for them, I speculate on the role of the robot as a pliable representation of a person, and how it offers the human the opportunity to retain an embodied presence in a place (classroom) in a way that is impossible via the use of a screen. Embodiment and interaction \textendash{} known as intercorporeality is unique to the notion of `place'; without it, we cannot lay claim to being in any place. This assertion has implications for the argument that there can be such a thing as an online `place'. It is my intention that my paper will provide an inspirational base for future researchers to consider our relation to place as our notions of being somewhere come to be questioned.},
   language = {en},
-  file = {/home/avnerus/Zotero/storage/6GVX4WZ9/Robertson - Robot avatars and the vicarious realm.pdf}
+  file = {/home/avnerus/Zotero/storage/4536ZSPE/Robertson - Robot avatars and the vicarious realm.pdf}
 }
 
 @article{robinsonCyberselfSelfingProject2007,
@@ -8155,6 +8216,24 @@
   isbn = {978-1-84872-114-2 978-1-84872-054-1 978-0-203-09546-1},
   keywords = {Attitudes,Disadvantaged,Ingroup Outgroup,Intergroup Dynamics,Interpersonal Control,Social Change,Social Perception,Socioeconomic Class Attitudes},
   file = {/home/avnerus/Zotero/storage/DUFUSNNW/2012-28154-005.html}
+}
+
+@article{sahAreYouWhat2017,
+  title = {Are {{You What Your Avatar Eats}}? {{Health}}-{{Behavior Effects}} of {{Avatar}}-{{Manifested Self}}-{{Concept}}},
+  shorttitle = {Are {{You What Your Avatar Eats}}?},
+  author = {Sah, Young June and Ratan, Rabindra and Tsai, Hsin-Yi Sandy and Peng, Wei and Sarinopoulos, Issidoros},
+  year = {2017},
+  month = oct,
+  journal = {Media Psychology},
+  volume = {20},
+  number = {4},
+  pages = {632--657},
+  publisher = {{Routledge}},
+  issn = {1521-3269},
+  doi = {10.1080/15213269.2016.1234397},
+  abstract = {Drawing on the self-concept activation and goal-priming account of the priming effect, this study examined how self-concept\textemdash i.e., ideal self, ought self, and actual self\textemdash can be harnessed as a model for avatar customization in digital games to promote healthy-eating behavior. Female participants (N = 133) customized an avatar in a digital game to reflect either the ideal, ought, or actual self. Participants then selected food items for their avatar within the digital game as well as food items for themselves to eat afterward. Results suggest that for participants using an ought-self avatar, the extent to which they were conscious of their health was positively related to healthier food choice both within and after playing the game. No such effect emerged for participants who used an ideal- or actual-self avatar, indicating that participants formed the goal of being healthy only with regard to the ought self. This study demonstrates that avatar customization in a digital game can serve a regulatory function by representing individuals' duties and responsibilities, thus, causing them to adopt such attributes manifested in their avatar during and after the game.},
+  annotation = {\_eprint: https://doi.org/10.1080/15213269.2016.1234397},
+  file = {/home/avnerus/Zotero/storage/7CAN4JSU/Sah et al. - 2017 - Are You What Your Avatar Eats Health-Behavior Eff.pdf;/home/avnerus/Zotero/storage/5CD6YTIY/15213269.2016.html}
 }
 
 @article{salemAntinormalizationDiscourseContext2005,
@@ -8919,6 +8998,19 @@
   abstract = {How do we conceptualize virtual materiality in terms of the avatars and weapons seen in computer games, for example, as well as virtual discourse and subjectivity as phenomena intra-acting with real-life materiality, discourse and subjectivity in children's everyday lives? How do we understand the intra-activity of such elements in children's night-time dreams? In this article, I discuss some of these issues, while bringing together Karen Barad's agential realism and Giorgio Agamben's concept of `potentiality' to enhance and refine my analytical approach to real\textendash virtual enactments. This theoretical framework allows me to question the potentialities of gaming, movies and dreams as they enter intra-activities with the comprehensive set of apparatuses that enact a child's agency, subjectivity and relational practices. The analyses and conceptual refinements that I present here are based on empirical data involving interviews with and observations of children between 8 and 14 years of age.},
   language = {en},
   file = {/home/avnerus/Zotero/storage/EYJER3SE/Søndergaard - 2013 - Virtual materiality, potentiality and subjectivity.pdf}
+}
+
+@article{spearsPanaceaPanopticonHidden1994,
+  title = {Panacea or Panopticon? {{The}} Hidden Power in Computer-Mediated Communication},
+  author = {Spears, Russell and Lea, Martin},
+  year = {1994},
+  journal = {Communication research},
+  volume = {21},
+  number = {4},
+  pages = {427--459},
+  publisher = {{Sage London}},
+  isbn = {0093-6502},
+  file = {/home/avnerus/Zotero/storage/ZB6V8HXT/spears1994.pdf}
 }
 
 @article{spearsWhenAreNet2002,
