--- a/survey/method-tests/biserial_correlations.Rmd
+++ b/survey/method-tests/biserial_correlations.Rmd
@@ -2,13 +2,16 @@
 title: "biserialk_correlations"
 author: "Avner Peled"
 date: "5/19/2021"
-output: html_document
+output:
+  pdf_document: default
+  html_document: default
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(dplyr)
 library(tidyr)
+load("/home/avnerus/Nextcloud/PhD/Survey/R/test3.RData")
 ```
 
 
