--- a/survey/method-tests/sentiment_analysis.Rmd
+++ b/survey/method-tests/sentiment_analysis.Rmd
@@ -3,8 +3,9 @@ title: "Sentiment analysis"
 author: "Avner Peled"
 date: "5/16/2021"
 output:
-  pdf_document: default
+  word_document: default
   html_document: default
+  pdf_document: default
 ---
 
 ```{r , include=FALSE}
